--- a/challenge.html
+++ b/challenge.html
@@ -4,8 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge</title>
+    <link rel="stylesheet" href="styles.css/blog.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <section class="section">
+        <div class="container">
+            <div class="viewers">
+                <img class="icon" src="resources/Star_fill.svg" alt="">
+                <h1 class="tittle">Reviewers</h1>
+                <p class="review-pera">Reviewers is where people can access guidelines, checklists, and other tools to assist them in reviewing papers or manuscripts. It provides a structured approach to ensure that the review process is thorough, efficient, and consistent.</p>
+               <div class="pera">
+                <img src="resources/Done_ring_round_fill.svg" alt=""><p> Checklist to Review an Academic Paper</p>
+               </div>
+               <div class="pera">
+                <img src="resources/Done_ring_round_fill.svg" alt=""><p> Peer Review Checklist</p>
+               </div>
+               <div class="pera">
+                <img src="resources/Done_ring_round_fill.svg" alt=""><p> Checklist for Editors, Reviewers, and Authors of SPIE Journals</p>
+               </div>
+            </div>
+            <div class="link-item">
+                <div class="google">
+                   <div class="gol">
+                     <div class="gol-img"> <img src="resources/google-png.png" alt="">
+                     </div>
+                      <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                      <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                      <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                      <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                      <div class="star"><img src="resources/Star_fill_gray.svg" alt=""></div>
+                   </div>
+                   <p>Samantha Lee</p>
+                   <div class="link">The checklist ensures that the review process is thorough</div>
+                </div>
+                <div class="meta">
+                    <div class="mat">
+                       <div class="mat-img"> <img src="resources/meta-png.png" alt=""></div>
+                        <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                        <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                        <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                        <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                        <div class="star"><img src="resources/Star_fill.svg" alt=""></div>
+                    </div>
+                    <p>Rachel Patel</p>
+                    <div class="link">I highly recommend the Writecream Business Description</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
